--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.7.0
   curved_labeled_navigation_bar: ^2.0.2
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
