--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   curved_labeled_navigation_bar: ^2.0.2
   http: ^1.2.0
+  google_maps_flutter: ^2.5.0
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
