--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   location: ^5.0.0
   dio: ^5.4.1
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
