--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dio: ^5.4.1
   geolocator: ^11.0.0
   url_launcher: ^6.2.5
+  expandable_bottom_sheet: ^1.1.1+1
+
 
 dev_dependencies:
   flutter_test:
