--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   geolocator: ^11.0.0
   url_launcher: ^6.2.5
   expandable_bottom_sheet: ^1.1.1+1
-
+  flutter_animated_button: ^2.0.3
 
 dev_dependencies:
   flutter_test:
