--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_animated_button: ^2.0.3
   permission_handler: ^11.3.0
   image_picker: ^1.0.7
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
