--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   permission_handler: ^11.3.0
   image_picker: ^1.0.7
   provider: ^6.1.2
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
