--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image_picker: ^1.0.7
   provider: ^6.1.2
   qr_code_scanner: ^1.0.1
+  fluttertoast: ^8.2.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
