--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   fluttertoast: ^8.2.4
   intl: ^0.19.0
+  local_auth: ^2.2.0
 
 dev_dependencies:
   flutter_test:
