--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,8 +50,10 @@ dependencies:
   provider: ^6.1.2
   qr_code_scanner: ^1.0.1
   fluttertoast: ^8.2.4
-  intl: ^0.19.0
+#  intl: ^0.19.0
+  intl: ^0.18.1
   local_auth: ^2.2.0
+  flutter_localization: ^0.2.0
 
 dev_dependencies:
   flutter_test:
