--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
 #  intl: ^0.19.0
   intl: ^0.18.1
   local_auth: ^2.2.0
+  easy_localization: ^3.0.5
   flutter_localization: ^0.2.0
 
 dev_dependencies:
