--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,7 @@ dependencies:
   easy_localization: ^3.0.5
   flutter_localization: ^0.2.0
   remove_diacritic: ^0.9.0
-  keyboard_attachable: ^2.2.0
-
+  keyboard_actions: ^4.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
