--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_localization: ^0.2.0
   remove_diacritic: ^0.9.0
   keyboard_actions: ^4.2.0
+  flutter_keyboard_visibility: ^6.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
